# orst-scrapper

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  sonar-project.properties  update_royin_dictionary.py
.agent/workflows/: update-royin.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-security.yml  publish.yml  release.yml  scheduled-update.yml  sonarcloud.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  USAGE.md  index.md
docs/api/: api_client.md  config.md  dictionary_diff.md  hunspell_writer.md  index.md  orst_scraper.md  thai_utils.md
scripts/: api_client.py  async_api_client.py  config.py  dictionary_diff.py  export.py  hunspell_writer.py  orst_scraper.py  progress_tracker.py  thai_utils.py
tests/: conftest.py  test_api_client.py  test_config.py  test_dictionary_diff.py  test_export.py  test_hunspell_writer.py  test_orst_scraper.py  test_orst_scraper_cli.py  test_progress_tracker.py  test_thai_utils.py  test_thai_utils_hypothesis.py
tests/integration/: test_api_integration.py  test_scraper_workflow.py
tests/performance/: test_performance.py
